--- a/namespaces/CMakeLists.txt
+++ b/namespaces/CMakeLists.txt
@@ -3,6 +3,6 @@ project(namespaces)
 set(FUCHSIA_ROOT /home/masato/fuchsia)
 set(FUCHSIA_SYSROOT ${FUCHSIA_ROOT}/out/build-magenta/build-magenta-pc-x86-64/sysroot)
 set(FUCHSIA_TARGET x86_64-fuchsia)
-set(CMAKE_CXX_FLAGS "--sysroot=${FUCHSIA_SYSROOT} --target=${FUCHSIA_TARGET}")
+set(CMAKE_CXX_FLAGS "-std=c++17 --sysroot=${FUCHSIA_SYSROOT} --target=${FUCHSIA_TARGET}")
 add_executable(namespaces namespaces.cpp)
-target_link_libraries(namespaces mxio)
+target_link_libraries(namespaces mxio magenta)
